[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carla_simulation"
version = "0.1"
authors = [
  { name="Tiziano Munaro", email="munaro@fortiss.org" },
]
description = "Simulate scenarios in a parallelized CARLA environment"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pygame==2.1.2",
  "numpy==1.23.5",
  "matplotlib==3.7.4",
  "docker==6.1.3",
  "carla==0.9.13",
  "urllib3==1.26.11",
  "requests==2.28.1"
]
